Added default application layout and styles for flash messages

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,6 +3,14 @@
   <%= form.label :email %>
   <%= form.text_field :email %>
 </div>
+<div class="text_field">
+  <%= form.label :first_name %>
+  <%= form.text_field :first_name %>
+</div>
+<div class="text_field">
+  <%= form.label :last_name %>
+  <%= form.text_field :last_name %>
+</div>
 <div class="password_field">
   <%= form.label :password %>
   <%= form.password_field :password %>
