Added user profile view and allow user to edit his profile

--- a/generators/blue_light_special/templates/application.html.erb
+++ b/generators/blue_light_special/templates/application.html.erb
@@ -33,6 +33,8 @@
     <% if current_user.admin? %>
       | <%= link_to 'Admin', '#' %>
     <% end %>
+    
+    | <%= link_to 'My Profile', user_path(current_user) %>
   <% else %>
     <%= link_to 'Sign in', sign_in_path %> |
     <%= link_to 'Sign up', sign_up_path %>
