--- a/generators/blue_light_special_admin/templates/app/views/admin/users/_form.html.erb
+++ b/generators/blue_light_special_admin/templates/app/views/admin/users/_form.html.erb
@@ -1,15 +1,15 @@
 <%= form.error_messages %>
 <p class="text_field">
-  <%= form.label :email %>
-  <%= form.text_field :email %>
-</p>
-<p class="text_field">
   <%= form.label :first_name %>
   <%= form.text_field :first_name %>
 </p>
 <p class="text_field">
   <%= form.label :last_name %>
   <%= form.text_field :last_name %>
+</p>
+<p class="text_field">
+  <%= form.label :email %>
+  <%= form.text_field :email %>
 </p>
 <p class="password_field">
   <%= form.label :password %>
@@ -18,4 +18,8 @@
 <p class="password_field">
   <%= form.label :password_confirmation, "Confirm password" %>
   <%= form.password_field :password_confirmation %>
+</p>
+<p>
+  <%= form.label :role %>
+  <%= form.collection_select :role, ['', 'admin'], :to_s, :to_s %>
 </p>
