--- a/lib/generators/blue_light_special_admin/templates/app/views/admin/users/show.html.erb
+++ b/lib/generators/blue_light_special_admin/templates/app/views/admin/users/show.html.erb
@@ -5,6 +5,6 @@
   <b>Last Name:</b> <%=h @user.last_name %><br/>
   <b>Email:</b> <%=h @user.email %><br/>
   <%= link_to 'Edit', edit_admin_user_path(@user) %><br/>
-  <%= link_to 'Delete', admin_user_path(@user), :method => :delete, :confirm => 'Are you sure?' %><br/>
-  <%= link_to 'Impersonate', impersonation_path(:user_id => @user.id), :method => :post, :id => "impersonate_#{@user.id}" %>
+  <%= button_to 'Delete', admin_user_path(@user), :method => :delete, :confirm => 'Are you sure?' %><br/>
+  <%= link_to 'Impersonate', impersonate_path(:user_id => @user.id), :id => "impersonate_#{@user.id}" %>
 </div>
